# hf-as5047u-driver

./: .gitignore  404.html  CMakeLists.txt  CONTRIBUTING.md  README.md  index.html  version_selector.html
.github/workflows/: ci-cpp-analysis.yml  ci-cpp-lint.yml  ci-docs-linkcheck.yml  ci-docs-publish.yml  esp32-examples-build-ci.yml
_config/: 404.html  Doxyfile  _config.yml  lychee.toml
_config/doxygen-extensions/: README.md
development/: README.md  feed.xml  index.html  robots.txt  sitemap.xml  version_info.json
development/api/: AS5047U_8cpp.html  AS5047U_8cpp__incl.map  AS5047U_8cpp__incl.md5  AS5047U_8cpp_source.html  AS5047U_8hpp.js  AS5047U_8hpp__dep__incl.map  AS5047U_8hpp__incl.map  AS5047U_8hpp__incl.md5  AS5047U_8hpp_source.html  AS5047U__Bus_8hpp.html  AS5047U__Bus_8hpp__dep__incl.md5  AS5047U__Bus_8hpp__incl.map  AS5047U__REGISTERS_8hpp__dep__incl.map  AS5047U__REGISTERS_8hpp__dep__incl.md5  AS5047U__REGISTERS_8hpp__incl.map  AS5047U__config_8hpp__dep__incl.map  AS5047U__config_8hpp__dep__incl.md5  AS5047U__config_8hpp__incl.md5  AS5047U__config_8hpp_source.html  AS5047U__types_8hpp.html  AS5047U__types_8hpp__dep__incl.map  AS5047U__types_8hpp__dep__incl.md5  AS5047U__types_8hpp_source.html  BasicAngleReadingExample_8cpp.html  BasicAngleReadingExample_8cpp__incl.md5  ConfigurationExample_8cpp.html  ConfigurationExample_8cpp__incl.map  DriverIntegrationTest_8cpp.html  DriverIntegrationTest_8cpp__incl.map  Esp32As5047uBus_8cpp.html  Esp32As5047uBus_8cpp__incl.map  Esp32As5047uBus_8cpp__incl.md5  Esp32As5047uBus_8hpp.html  Esp32As5047uBus_8hpp.js  Esp32As5047uBus_8hpp__dep__incl.md5  Esp32As5047uBus_8hpp__incl.md5  Esp32As5047uBus_8hpp_source.html  FullFeaturesExample_8cpp.html  FullFeaturesExample_8cpp__incl.map  FullFeaturesExample_8cpp__incl.md5  (+214 more)
development/api/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_23.js  all_24.js  all_25.js  all_27.js  all_3.js  all_31.js  all_32.js  all_35.js  all_38.js  all_3a.js  all_3d.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  (+47 more)
development/assets/js/: just-the-docs.js  search-data.json
development/cmake/: hf_as5047uConfig.cmake.in  hf_as5047u_build_settings.cmake
development/docs/: README.md  api_reference.html  building.html  building.md  configuration.html  configuration.md  doxygen-extensions.html  examples.html  examples.md  hardware_setup.html  index.html  installation.html  platform_integration.html  platform_integration.md  quickstart.html  setup.html  setup.md  troubleshooting.html  troubleshooting.md  usage.html  usage.md  workflow.html  workflow.md
development/docs/api_reference/: index.html
development/docs/building/: index.html
development/docs/cmake_integration/: index.html
development/docs/configuration/: index.html
development/docs/doxygen-extensions/: index.html
development/docs/examples/: index.html
development/docs/hardware_setup/: index.html
development/docs/html/: AS5047U_8cpp.js  AS5047U_8cpp__dep__incl.map  AS5047U_8cpp__dep__incl.md5  AS5047U_8cpp__incl.map  AS5047U_8cpp_source.html  AS5047U_8hpp.html  AS5047U_8hpp__dep__incl.map  AS5047U_8hpp__dep__incl.md5  AS5047U_8hpp__incl.md5  AS5047U_8hpp_source.html  AS5047U__Bus_8hpp.html  AS5047U__Bus_8hpp__dep__incl.map  AS5047U__Bus_8hpp__incl.md5  AS5047U__Bus_8hpp_source.html  AS5047U__REGISTERS_8hpp.html  AS5047U__REGISTERS_8hpp__dep__incl.map  (+231 more)
development/examples/esp32/components/hf_as5047u/: CMakeLists.txt  idf_component.yml
docs/: api_reference.md  building.md  cmake_integration.md  configuration.md  doxygen-extensions.md  examples.md  hardware_setup.md  index.md  installation.md  platform_integration.md  quickstart.md  setup.md  troubleshooting.md  usage.md  workflow.md
doxs/development/: AS5047U_8cpp.html  AS5047U_8cpp__dep__incl.md5  AS5047U_8cpp__incl.md5  AS5047U_8cpp_source.html  AS5047U_8hpp.html  AS5047U_8hpp__dep__incl.map  AS5047U_8hpp__dep__incl.md5  AS5047U_8hpp__incl.map  AS5047U_8hpp__incl.md5  AS5047U__Bus_8hpp__dep__incl.md5  AS5047U__Bus_8hpp_source.html  AS5047U__REGISTERS_8hpp.html  AS5047U__REGISTERS_8hpp.js  AS5047U__REGISTERS_8hpp__dep__incl.map  AS5047U__REGISTERS_8hpp__dep__incl.md5  AS5047U__REGISTERS_8hpp__incl.map  AS5047U__REGISTERS_8hpp__incl.md5  AS5047U__REGISTERS_8hpp_source.html  AS5047U__config_8hpp.html  AS5047U__config_8hpp__dep__incl.map  AS5047U__config_8hpp__incl.md5  AS5047U__types_8hpp.html  AS5047U__types_8hpp__dep__incl.map  BasicAngleReadingExample_8cpp.html  ConfigurationExample_8cpp.html  ConfigurationExample_8cpp__incl.map  ConfigurationExample_8cpp__incl.md5  DriverIntegrationTest_8cpp.html  DriverIntegrationTest_8cpp__incl.map  DriverIntegrationTest_8cpp__incl.md5  Esp32As5047uBus_8hpp__dep__incl.map  Esp32As5047uBus_8hpp__incl.map  Esp32As5047uBus_8hpp__incl.md5  Esp32As5047uBus_8hpp_source.html  FullFeaturesExample_8cpp.html  FullFeaturesExample_8cpp.js  FullFeaturesExample_8cpp__incl.map  FullFeaturesExample_8cpp__incl.md5  TestFramework_8h__dep__incl.map  VelocityReadingExample_8cpp.html  (+189 more)
examples/esp32/: CMakeLists.txt  README.md  app_config.yml
examples/esp32/components/hf_as5047u/: CMakeLists.txt  idf_component.yml
examples/esp32/main/: BasicAngleReadingExample.cpp  CMakeLists.txt  ConfigurationExample.cpp  DriverIntegrationTest.cpp  Esp32As5047uBus.cpp  Esp32As5047uBus.hpp  FullFeaturesExample.cpp  TestFramework.h  VelocityReadingExample.cpp  basic_angle_reading_example.cpp  configuration_example.cpp  driver_integration_test.cpp  esp32_as5047u_bus.cpp  esp32_as5047u_bus.hpp  esp32_as5047u_test_config.hpp  full_features_example.cpp  velocity_reading_example.cpp
inc/: AS5047U.hpp  AS5047U_Bus.hpp  AS5047U_REGISTERS.hpp  AS5047U_config.hpp  AS5047U_types.hpp  as5047u.hpp  as5047u_config.hpp  as5047u_registers.hpp  as5047u_spi_interface.hpp  as5047u_types.hpp  as5047u_version.h.in
src/: AS5047U.cpp  as5047u.cpp  as5047u.ipp
(+528 files in other folders)
